[package]
name = "geckodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "5.0.0"
byteorder = "1.4"
gdbstub_arch = "0.3.0"
lazy_static = "1.4"
regex = "1.7"
argparse = "0.2"

[dependencies.libftd2xx]
version = "0.32.4"
features = ["static"]

[dependencies.gdbstub]
version = "0.7"
features = ["std"]